그림파일명 괄호 제거 (markdown의 괄호 문법과 구분 안 됨.)

--- a/3-product-install/3-3-robot-interface/2-external-device-interface/2-tb2.md
+++ b/3-product-install/3-3-robot-interface/2-external-device-interface/2-tb2.md
@@ -8,9 +8,9 @@
 
 이 신호는 제어기 내부에 설치된 안전 제어 모듈(SCM)에 연결되어 있습니다. 신호 연결에 대한 자세한 내용은 “[**4.3.2.3 안전 입출력 신호 연결(TBSDI, TBSDO)**](../../../4-maintenance/4-3-controller-check-maintenance/2-safety-control-module/3-tbsdi-tbsdo.md)”을 참조하십시오.
 
-![그림 21 전용 안전 신호(보호 장치) 연결 방법: 접점 스위치의 경우](<../../../_assets/tb2\_2 (1).png>)
+![그림 21 전용 안전 신호(보호 장치) 연결 방법: 접점 스위치의 경우](<../../../_assets/tb2\_2_1.png>)
 
-![그림 22 전용 안전 신호(보호 장치) 연결 방법: 반도체 타입 출력의 경우](<../../../_assets/tb2\_2 (1) (1).png>)
+![그림 22 전용 안전 신호(보호 장치) 연결 방법: 반도체 타입 출력의 경우](<../../../_assets/tb2\_2_1_1.png>)
 
 {% hint style="warning" %}
 **\[주의]**
