--- a/3-product-install/3-3-robot-interface/2-external-device-interface/3-tb3.md
+++ b/3-product-install/3-3-robot-interface/2-external-device-interface/3-tb3.md
@@ -4,6 +4,6 @@
 
 ![](../../../_assets/tb3\_1.png)
 
-![](<../../../_assets/image (34).png>)
+![](<../../../_assets/image_34.png>)
 
 ![그림 23 범용 디지털 입출력 신호 연결 방법](../../../_assets/tb3\_2.png)
