그림파일명 괄호 제거 (markdown의 괄호 문법과 구분 안 됨.)

--- a/3-product-install/3-3-robot-interface/2-external-device-interface/1-tb1.md
+++ b/3-product-install/3-3-robot-interface/2-external-device-interface/1-tb1.md
@@ -4,7 +4,7 @@ You can connect common analog I/O signals, two at a time, to Terminal Block, TB1
 
 ![](../../../_assets/TB1\_1.png)
 
-![](<../../../_assets/image (38).png>)
+![](<../../../_assets/image_38.png>)
 
 This signal is connected to the Safety control module installed inside the controller. For more details on signal connection, refer to “[**4.3.2.5 Connection of common digital I/O signals (TBAIO)**](../../../4-maintenance/4-3-controller-check-maintenance/2-safety-control-module/5-tbaio.md)”.
 
