--- a/3-product-install/3-3-robot-interface/2-external-device-interface/2-tb2.md
+++ b/3-product-install/3-3-robot-interface/2-external-device-interface/2-tb2.md
@@ -4,11 +4,11 @@ You can connect I/O signals dedicated to the robot system, such as the signals o
 
 ![](../../../_assets/TB1\_1.png)
 
-![](<../../../_assets/image (39).png>)
+![](<../../../_assets/image_39.png>)
 
 This signal is connected to the Safety control module installed inside the controller. For more details on signal connection, refer to “[**4.3.2.3 Safety I/O signal connection (TBSDI, TBSDO)**](../../../4-maintenance/4-3-controller-check-maintenance/2-safety-control-module/3-tbsdi-tbsdo.md)”
 
-![Figure 21 Method for connecting dedicated safety signals (protective devices)in the case of contact switches ](<../../../_assets/tb2\_2 (1).png>)
+![Figure 21 Method for connecting dedicated safety signals (protective devices)in the case of contact switches ](<../../../_assets/tb2\_2_1.png>)
 
 ![Figure 22 Method for connecting dedicated safety signals (protective devices) in the case of semiconductor type outputs](../../../_assets/tb2\_2.png)
 
