--- a/3-product-install/3-3-robot-interface/2-external-device-interface/3-tb3.md
+++ b/3-product-install/3-3-robot-interface/2-external-device-interface/3-tb3.md
@@ -4,6 +4,6 @@ You can connect system signal I/Os, eight at a time, to Terminal Block, TB3. You
 
 ![](../../../_assets/TB3\_1.png)
 
-![](<../../../_assets/image (41).png>)
+![](<../../../_assets/image_41.png>)
 
 ![Figure 23 Method for connecting universal digital input and output signals  ](../../../_assets/TB3\_2.png)
